--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,9 +8,11 @@ env:
   DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
   BINTRAY_REPO: custom
   OS7: 7.9.2009
-  OS8: stream8
+  RL8="8.7.20221112"
+  OS9="stream9-20221206.0"
   OS7TAG: 7.9.2009
-  OS8TAG: stream8
+  RL8TAG="8.7.20221112"
+  OS9TAG="stream9-20221206.0"
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -20,9 +22,12 @@ jobs:
           - build: centos7build
             uploader: centos7bintray
             repo_path: ""
-          - build: stream8build
-            uploader: stream8bintray
-            repo_path: centos/8-stream
+          - build: rocky8build
+            uploader: rocky8bintray
+            repo_path: rocky/8
+          - build: stream9build
+            uploader: stream9bintray
+            repo_path: centos/9-stream
     env:
       BUILD: ${{ matrix.build }}
       UPLOADER: ${{ matrix.uploader }}
