--- a/Dockerfile.el7
+++ b/Dockerfile.el7
@@ -1,11 +1,11 @@
 ARG centos=7.9.2009
-FROM aursu/rpmbuild:${centos}-build
+FROM aursu/rpmbuild:${centos}-build-gcc8
 
 USER root
-RUN dnf -y install \
+RUN yum -y install \
         doxygen \
         python3 \
-    && dnf clean all && rm -rf /var/cache/dnf
+    && yum clean all && rm -rf /var/cache/yum
 
 COPY SOURCES ${BUILD_TOPDIR}/SOURCES
 COPY SPECS ${BUILD_TOPDIR}/SPECS
