--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,11 +8,11 @@ env:
   DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
   BINTRAY_REPO: custom
   OS7: 7.9.2009
-  RL8="8.7.20221112"
-  OS9="stream9-20221206.0"
+  RL8: 8.7.20221112
+  OS9: stream9-20221206.0
   OS7TAG: 7.9.2009
-  RL8TAG="8.7.20221112"
-  OS9TAG="stream9-20221206.0"
+  RL8TAG: 8.7.20221112
+  OS9TAG: stream9-20221206.0
 jobs:
   test:
     runs-on: ubuntu-latest
